update3 add articles

--- a/index.html
+++ b/index.html
@@ -63,69 +63,63 @@
         <p>Plus de 500 logements sont disponible dans cette ville</p>
     </div>
 
-<form class="card_container">
-    <article class="card_bloc">
-        <a href="#">
-            <div class="image"><img src="images/hebergements/4_small/h.jpg" alt="auberge"></div>
-            <div class="text">
-                <h3 class="title">Auberge de La Cannebière</h3>
-                <p class="price">Nuit à partir de 25€</p>
-                <div class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>   
-            </div>
-        </a>
-    </article>
-    <article class="card_bloc">
-        <a href="#">
-            <div class="image"><img src="images/hebergements/4_small/g.jpg" alt="port"></div>
-            <div class="text">
-                <h3 class="title">Hôtel du port</h3>
-                <p class="price">Nuit à partir de 52€</p>
-                <div class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>   
-            </div>
-        </a>
-    </article>
-    <article class="card_bloc">
-        <a href="#">
-            <div class="image"><img src="images/hebergements/4_small/j.jpg" alt="mouettes"></div>
-            <div class="text">
-                <h3 class="title">Hôtel Les mouettes</h3>
-                <p class="price">Nuit à partir de 76€</p>
-                <div class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>   
-            </div>
-        </a>
-    </article>
-    <article class="card_bloc">
-        <a href="#">
-            <div class="image"><img src="images/hebergements/4_small/a.jpg" alt="mer"></div>
-            <div class="text">
-                <h3 class="title">Hôtel de La mer</h3>
-                <p class="price">Nuit à partir de 46€</p>
-                <div class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>   
-            </div>
-        </a>
-    </article>
-    <article class="card_bloc">
-        <a href="#">
-            <div class="image"><img src="images/hebergements/4_small/i.jpg" alt="panier"></div>
-            <div class="text">
-                <h3 class="title">Auberge Le Panier</h3>
-                <p class="price">Nuit à partir de 23€</p>
-                <div class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>   
-            </div>
-        </a>
-    </article>
-    <article class="card_bloc">
-        <a href="#">
-            <div class="image"><img src="images/hebergements/4_small/d.jpg" alt="amina"></div>
-            <div class="text">
-                <h3 class="title">Hôtel chez Amina</h3>
-                <p class="price">Nuit à partir de 96€</p>
-                <div class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>   
-            </div>
-        </a>
-    </article>
-</form>
-    </main>
+
+
+    <div class="flex_container">
+        <h2>Hébergements à Marseille</h2>
+        <article class="article1">
+            <a href="#">
+                <div class="picture"><img src="images/hebergements/4_small/g.jpg" alt="port"></div>
+                    <h3 class="title">Hôtel du port</h3>
+                    <p class="price">Nuit à partir de 52€</p>
+                    <div class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
+            </a>
+        </article>              
+        <article class="article1">
+            <a href="#">
+                <div class="picture"><img src="images/hebergements/4_small/g.jpg" alt="port"></div>
+                    <h3 class="title">Hôtel du port</h3>
+                    <p class="price">Nuit à partir de 52€</p>
+                    <div class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
+            </a>
+        </article>   
+        <article class="article1">
+            <a href="#">
+                <div class="picture"><img src="images/hebergements/4_small/g.jpg" alt="port"></div>
+                    <h3 class="title">Hôtel du port</h3>
+                    <p class="price">Nuit à partir de 52€</p>
+                    <div class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
+            </a>
+        </article>   
+        <article class="article1">
+            <a href="#">
+                <div class="picture"><img src="images/hebergements/4_small/g.jpg" alt="port"></div>
+                    <h3 class="title">Hôtel du port</h3>
+                    <p class="price">Nuit à partir de 52€</p>
+                    <div class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
+            </a>
+        </article>
+        <article class="article1">
+            <a href="#">
+                <div class="picture"><img src="images/hebergements/4_small/g.jpg" alt="port"></div>
+                    <h3 class="title">Hôtel du port</h3>
+                    <p class="price">Nuit à partir de 52€</p>
+                    <div class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
+            </a>
+        </article>
+        <article class="article1">
+            <a href="#">
+                <div class="picture"><img src="images/hebergements/4_small/g.jpg" alt="port"></div>
+                    <h3 class="title">Hôtel du port</h3>
+                    <p class="price">Nuit à partir de 52€</p>
+                    <div class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
+            </a>
+        </article>   
+        <a>Afficher plus</a>
+    </div>
+</main>
+
+
 
     <footer>
             <div>
