update4 1st block finished

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <img src="images/logo/Booki@3x.png" alt="logo"></a>
+        <img class="logo1" src="images/logo/Booki@3x.png" alt="logo"></a>
         <nav>
             <ul>
                 <li><a href="Hébergements_à_Marseille.html">Hébergements</a></li>
@@ -66,56 +66,71 @@
 
 
     <div class="flex_container">
-        <h2>Hébergements à Marseille</h2>
-        <article class="article1">
-            <a href="#">
-                <div class="picture"><img src="images/hebergements/4_small/g.jpg" alt="port"></div>
-                    <h3 class="title">Hôtel du port</h3>
-                    <p class="price">Nuit à partir de 52€</p>
-                    <div class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-            </a>
-        </article>              
-        <article class="article1">
-            <a href="#">
-                <div class="picture"><img src="images/hebergements/4_small/g.jpg" alt="port"></div>
-                    <h3 class="title">Hôtel du port</h3>
-                    <p class="price">Nuit à partir de 52€</p>
-                    <div class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-            </a>
-        </article>   
-        <article class="article1">
-            <a href="#">
-                <div class="picture"><img src="images/hebergements/4_small/g.jpg" alt="port"></div>
-                    <h3 class="title">Hôtel du port</h3>
-                    <p class="price">Nuit à partir de 52€</p>
-                    <div class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-            </a>
-        </article>   
-        <article class="article1">
-            <a href="#">
-                <div class="picture"><img src="images/hebergements/4_small/g.jpg" alt="port"></div>
-                    <h3 class="title">Hôtel du port</h3>
-                    <p class="price">Nuit à partir de 52€</p>
-                    <div class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-            </a>
-        </article>
-        <article class="article1">
-            <a href="#">
-                <div class="picture"><img src="images/hebergements/4_small/g.jpg" alt="port"></div>
-                    <h3 class="title">Hôtel du port</h3>
-                    <p class="price">Nuit à partir de 52€</p>
-                    <div class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-            </a>
-        </article>
-        <article class="article1">
-            <a href="#">
-                <div class="picture"><img src="images/hebergements/4_small/g.jpg" alt="port"></div>
-                    <h3 class="title">Hôtel du port</h3>
-                    <p class="price">Nuit à partir de 52€</p>
-                    <div class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-            </a>
-        </article>   
-        <a>Afficher plus</a>
+            <h2>Hébergements à Marseille</h2>
+        <div class="bloc_article">
+            <article class="article1">
+                <a class="texte" href="#" >
+                    <img class="img_article" src="images/hebergements/4_small/h.jpg" alt="port">
+                    <div class="paragraphe">
+                       <h3 class="title">Auberge La Cannebière</h3>
+                        <p class="price">Nuit à partir de 25€</p>
+                        <div class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
+                    </div>
+                </a>
+            </article>              
+            <article class="article1">
+                <a class="texte" href="#" >
+                    <img class="img_article" src="images/hebergements/4_small/g.jpg" alt="port">
+                    <div class="paragraphe">
+                       <h3 class="title">Hôtel du port</h3>
+                        <p class="price">Nuit à partir de 52€</p>
+                        <div class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
+                    </div>
+                </a>
+            </article>  
+            <article class="article1">
+                <a class="texte" href="#" >
+                    <img class="img_article" src="images/hebergements/4_small/j.jpg" alt="port">
+                    <div class="paragraphe">
+                       <h3 class="title">Hôtel Les mouettes</h3>
+                        <p class="price">Nuit à partir de 76€</p>
+                        <div class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
+                    </div>
+                </a>
+            </article>  
+            <article class="article1">
+                <a class="texte" href="#" >
+                    <img class="img_article" src="images/hebergements/4_small/a.jpg" alt="port">
+                    <div class="paragraphe">
+                       <h3 class="title">Hôtel de la mer</h3>
+                        <p class="price">Nuit à partir de 46€</p>
+                        <div class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
+                    </div>
+                </a>
+            </article>  
+            <article class="article1">
+                <a class="texte" href="#" >
+                    <img class="img_article" src="images/hebergements/4_small/i.jpg" alt="port">
+                    <div class="paragraphe">
+                       <h3 class="title">Auberge Le Panier</h3>
+                        <p class="price">Nuit à partir de 23€</p>
+                        <div class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
+                    </div>
+                </a>
+            </article>  
+            <article class="article1">
+                <a class="texte" href="#" >
+                    <img class="img_article" src="images/hebergements/4_small/d.jpg" alt="port">
+                    <div class="paragraphe">
+                       <h3 class="title">Hôtel chez Amina</h3>
+                        <p class="price">Nuit à partir de 96€</p>
+                        <div class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
+                    </div>
+                </a>
+            </article>  
+        </div>
+
+            <a class="plus">Afficher plus</a>
     </div>
 </main>
 
