update5 2nd block finished

--- a/index.html
+++ b/index.html
@@ -64,73 +64,170 @@
     </div>
 
 
+    <div class="containers">
+            <div class="flex_container">
+                    <h2>Hébergements à Marseille</h2>
+                <div class="bloc_article">
+                    <article class="article1">
+                        <a class="texte" href="#" >
+                            <img class="img_article" src="images/hebergements/4_small/h.jpg" alt="port">
+                            <div class="paragraphe">
+                            <h3 class="title">Auberge La Cannebière</h3>
+                                <p class="price">Nuit à partir de 25€</p>
+                                <div class="rating1">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <div class="rating2">
+                                    <i class="fa-solid fa-star"></i>
+                                </div>
+                            </div>
+                        </a>
+                    </article>              
+                    <article class="article1">
+                        <a class="texte" href="#" >
+                            <img class="img_article" src="images/hebergements/4_small/g.jpg" alt="port">
+                            <div class="paragraphe">
+                            <h3 class="title">Hôtel du port</h3>
+                                <p class="price">Nuit à partir de 52€</p>
+                                <div class="rating1">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                </div>
+                            </div>
+                        </a>
+                    </article>  
+                    <article class="article1">
+                        <a class="texte" href="#" >
+                            <img class="img_article" src="images/hebergements/4_small/j.jpg" alt="port">
+                            <div class="paragraphe">
+                            <h3 class="title">Hôtel Les mouettes</h3>
+                                <p class="price">Nuit à partir de 76€</p>
+                                <div class="rating1">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <div class="rating2">
+                                    <i class="fa-solid fa-star"></i>
+                                </div>
+                            </div>
+                        </a>
+                    </article>  
+                    <article class="article1">
+                        <a class="texte" href="#" >
+                            <img class="img_article" src="images/hebergements/4_small/a.jpg" alt="port">
+                            <div class="paragraphe">
+                            <h3 class="title">Hôtel de la mer</h3>
+                                <p class="price">Nuit à partir de 46€</p>
+                                <div class="rating1">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <div class="rating2">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                </div>                 
+                            </div>
+                        </a>
+                    </article>  
+                    <article class="article1">
+                        <a class="texte" href="#" >
+                            <img class="img_article" src="images/hebergements/4_small/i.jpg" alt="port">
+                            <div class="paragraphe">
+                            <h3 class="title">Auberge Le Panier</h3>
+                                <p class="price">Nuit à partir de 23€</p>
+                                <div class="rating1">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <div class="rating2">
+                                    <i class="fa-solid fa-star"></i>
+                                </div>                    
+                            </div>
+                        </a>
+                    </article>  
+                    <article class="article1">
+                        <a class="texte" href="#" >
+                            <img class="img_article" src="images/hebergements/4_small/d.jpg" alt="port">
+                            <div class="paragraphe">
+                            <h3 class="title">Hôtel chez Amina</h3>
+                                <p class="price">Nuit à partir de 96€</p>
+                                <div class="rating1">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                </div>                    
+                            </div>
+                        </a>
+                    </article>  
+                </div>
+                    <a href="#" class="plus">Afficher plus</a>
+            </div>
 
-    <div class="flex_container">
-            <h2>Hébergements à Marseille</h2>
-        <div class="bloc_article">
-            <article class="article1">
-                <a class="texte" href="#" >
-                    <img class="img_article" src="images/hebergements/4_small/h.jpg" alt="port">
-                    <div class="paragraphe">
-                       <h3 class="title">Auberge La Cannebière</h3>
-                        <p class="price">Nuit à partir de 25€</p>
-                        <div class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-                    </div>
-                </a>
-            </article>              
-            <article class="article1">
-                <a class="texte" href="#" >
-                    <img class="img_article" src="images/hebergements/4_small/g.jpg" alt="port">
-                    <div class="paragraphe">
-                       <h3 class="title">Hôtel du port</h3>
-                        <p class="price">Nuit à partir de 52€</p>
-                        <div class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-                    </div>
-                </a>
-            </article>  
-            <article class="article1">
-                <a class="texte" href="#" >
-                    <img class="img_article" src="images/hebergements/4_small/j.jpg" alt="port">
-                    <div class="paragraphe">
-                       <h3 class="title">Hôtel Les mouettes</h3>
-                        <p class="price">Nuit à partir de 76€</p>
-                        <div class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-                    </div>
-                </a>
-            </article>  
-            <article class="article1">
-                <a class="texte" href="#" >
-                    <img class="img_article" src="images/hebergements/4_small/a.jpg" alt="port">
-                    <div class="paragraphe">
-                       <h3 class="title">Hôtel de la mer</h3>
-                        <p class="price">Nuit à partir de 46€</p>
-                        <div class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-                    </div>
-                </a>
-            </article>  
-            <article class="article1">
-                <a class="texte" href="#" >
-                    <img class="img_article" src="images/hebergements/4_small/i.jpg" alt="port">
-                    <div class="paragraphe">
-                       <h3 class="title">Auberge Le Panier</h3>
-                        <p class="price">Nuit à partir de 23€</p>
-                        <div class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-                    </div>
-                </a>
-            </article>  
-            <article class="article1">
-                <a class="texte" href="#" >
-                    <img class="img_article" src="images/hebergements/4_small/d.jpg" alt="port">
-                    <div class="paragraphe">
-                       <h3 class="title">Hôtel chez Amina</h3>
-                        <p class="price">Nuit à partir de 96€</p>
-                        <div class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-                    </div>
-                </a>
-            </article>  
-        </div>
-
-            <a class="plus">Afficher plus</a>
+            <div class="flex_container2">
+                <div class="trend">
+                    <p>Les plus populaires</p>
+                    <i class="fa-solid fa-chart-line-up"></i>
+                </div>
+                <article class="article2">
+                    <a class="texte1" href="#" >
+                        <img class="img_article2" src="images/hebergements/4_small/c.jpg" alt="appart">
+                        <div class="paragraphe3">
+                        <h3 class="title">Hôtel Le soleil du matin</h3>
+                            <p class="price">Nuit à partir de 128€</p>
+                            <div class="rating3">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </div>                    
+                        </div>
+                    </a>
+                </article>
+                <article class="article2">
+                    <a class="texte" href="#" >
+                        <img class="img_article2" src="images/hebergements/4_small/b.jpg" alt="appart">
+                        <div class="paragraphe2">
+                        <h3 class="title">Au coeur de l'eau Chambres d'hôtes</h3>
+                            <p class="price">Nuit à partir de 71€</p>
+                            <div class="rating3">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <div class="rating2">
+                                <i class="fa-solid fa-star"></i>
+                            </div>                    
+                        </div>
+                    </a>
+                </article>
+                <article class="article2">
+                    <a class="texte2" href="#" >
+                        <img class="img_article2" src="images/hebergements/4_small/f.jpg" alt="appart">
+                        <div class="paragraphe3">
+                        <h3 class="title">Hôtel Tout bleu et Blanc</h3>
+                            <p class="price">Nuit à partir de 68€</p>
+                            <div class="rating3">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <div class="rating2">
+                                <i class="fa-solid fa-star"></i>
+                            </div>                   
+                        </div>
+                    </a>
+                </article>
+            </div>
     </div>
 </main>
 
