--- a/index.html
+++ b/index.html
@@ -229,23 +229,50 @@
                 </article>
             </div>
     </div>
+    <div class="activites">
+        <p>Activités à Marseille</p>
+        <div class="carte1">
+            <img class="type1" src="images/activites/4_small/fg.jpg" alt="port">
+            <p>Vieux Port</p>
+        </div>
+        <div class="carte2">
+            <img class="type2" src="images/activites/4_small/ef.jpg" alt="fort">
+            <p>Fort de Pomègues</p>
+        </div>
+        <div class="carte2">
+            <img class="type2" src="images/activites/4_small/bc.jpg" alt="ile">
+            <p>îles du Frioul</p>
+        </div>
+        <div class="carte1">
+            <img class="type1" src="images/activites/4_small/cd.jpg" alt="parc">
+            <p>Parc National des Calanques</p>
+        </div>
+        <div class="carte2">
+            <img class="type2" src="images/activites/4_small/ab.jpg" alt="notredame">
+            <p>Notre-Dame-de-la-Garde</p>
+        </div>
+        <div class="carte2">
+            <img class="type2" src="images/activites/4_small/de.jpg" alt="longchamp">
+            <p>Parc Longchamp</p>
+        </div>
+    </div>
 </main>
 
 
 
     <footer>
-            <div>
+            <div class="pdp1">
                 <h1>Propos</h1>
                 <p>Fonctionnement du site</p>
                 <p>Conditions générales de vente</p>
                 <p>Données et confidentialité</p>
             </div>
-            <div>
+            <div class="pdp2">
                 <h1>Nos Hébergements</h1>
                 <p>Charte qualité</p>
                 <p>Soumettre votre hôtel</p>
             </div>
-            <div>
+             <div class="pdp2">
                 <h1>Assistance</h1>
                 <p>Centre d'aide</p>
                 <p>Nous contacter</p>
