update8 details+mise en page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <img class="logo1" src="images/logo/Booki@3x.png" alt="logo"></a>
+        <img class="logo1" src="images/logo/Booki@3x.png" alt="logo">
         <nav>
             <ul>
                 <li><a href="Hébergements_à_Marseille.html">Hébergements</a></li>
@@ -26,11 +26,11 @@
     </header>
 
     <main>
-        <section>
+        <div>
                 <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
                 <p class="intro">En plein centre ville ou en pleine nature</p>
-        </section>
-        <section class="container">
+        </div>
+        <div class="container">
             <div class="search_wrap">    
                 <i class="fa-solid fa-location-dot fat-customize"></i>  
                 <input type="text" class="input" value="Marseille, France">
@@ -38,10 +38,10 @@
                     <p>Rechercher</p>
                     </div>
             </div>
-        </section>
-        <section class="filtreparent">
-            <p>Filtres</p> 
-        <div class="filtre">
+        </div>
+        <div class="filtreparent">
+            <p class="filter">Filtres</p> 
+            <div class="filtre">
                     <i class="fa-solid fa-money-bill-wave"></i>
                 <a href="#" class="myButton">Economique</a>
             </div>
@@ -57,11 +57,11 @@
                 <i class="fa-solid fa-dog"></i>            
                 <a href="#" class="myButton">Animaux acceptés</a>
             </div>
-        </section>
-        <section class="infoicone">
+        </div>
+        <div class="infoicone">
             <i class="fa-solid fa-circle-info"></i>
             <p>Plus de 500 logements sont disponible dans cette ville</p>
-        </section>
+        </div>
 
 
         <section class="containers">
@@ -186,7 +186,7 @@
 
                 <div class="flex_container2">
                     <div class="trend">
-                        <p>Les plus populaires</p>
+                        <h2 class="popu">Les plus populaires</h2>
                         <i class="fa-solid fa-arrow-trend-up"></i>
                     </div>
                     <article class="article2">
