update9 details+responsive1

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
             <div class="filtre">
                 <i class="fa-solid fa-dog"></i>            
-                <a href="#" class="myButton">Animaux acceptés</a>
+                <a href="#" class="myButton">Animaux autorisés</a>
             </div>
         </div>
         <div class="infoicone">
@@ -248,49 +248,61 @@
                 </div>
         </section>
         <section class="activites">
-            <p class="activ">Activités à Marseille</p>
+            <h2 class="activ">Activités à Marseille</h2>
             <div class="bloccartes">
               <div class="carte1">
+                <a class="texte" href="#" >
                    <img class="big" src="images/activites/4_small/fg.jpg" alt="port">
                    <p class="description">Vieux Port</p>
+                </a>
               </div>
-                 <div class="carte2">
-                   <img class="small1" src="images/activites/4_small/ef.jpg" alt="fort">
-                   <p class="description">Fort de Pomègues</p>
-                 </div>
-                 <div class="carte3">
-                  <img class="small2" src="images/activites/4_small/bc.jpg" alt="ile">
-                  <p class="description2">îles du Frioul</p>
-                 </div>
-                 <div class="carte1">
-                  <img class="big" src="images/activites/4_small/cd.jpg" alt="parc">
-                  <p class="description">Parc National des Calanques</p>
-                 </div>
-              <div class="carte4">
-                   <img class="small3" src="images/activites/4_small/ab.jpg" alt="notredame">						
-                   <p class="description">Notre-Dame-de-la-Garde</p>
-                 </div>
-                 <div class="carte5">
-                  <img class="small3" src="images/activites/4_small/de.jpg" alt="longchamp">						
-                  <p class="description">Parc Longchamp</p>
-             </div>
+                <div class="carte2">
+                    <a class="texte" href="#" >
+                    <img class="small1" src="images/activites/4_small/ef.jpg" alt="fort">
+                    <p class="description">Fort de Pomègues</p>
+                    </a>
+                </div>
+                <div class="carte3">
+                    <a class="texte" href="#" >
+                    <img class="small2" src="images/activites/4_small/bc.jpg" alt="ile">
+                    <p class="description2">îles du Frioul</p>
+                    </a>
+                </div>
+                <div class="carte1">
+                    <a class="texte" href="#" >
+                    <img class="big" src="images/activites/4_small/cd.jpg" alt="parc">
+                    <p class="description">Parc National des Calanques</p>
+                    </a>
+                </div>
+                <div class="carte4">
+                    <a class="texte" href="#" >
+                    <img class="small3" src="images/activites/4_small/ab.jpg" alt="notredame">						
+                    <p class="description">Notre-Dame-de-la-Garde</p>
+                    </a>
+                </div>
+                <div class="carte5">
+                    <a class="texte" href="#" >
+                    <img class="small3" src="images/activites/4_small/de.jpg" alt="longchamp">						
+                    <p class="description">Parc Longchamp</p>
+                    </a>
+                </div>
             </div>
           </section>
     </main>
     <footer>
             <div class="pdp1">
-                <h1>Propos</h1>
+                <h3 class="foot">A propos</h3>
                 <p>Fonctionnement du site</p>
                 <p>Conditions générales de vente</p>
                 <p>Données et confidentialité</p>
             </div>
             <div class="pdp2">
-                <h1>Nos Hébergements</h1>
+                <h3 class="foot">Nos Hébergements</h3>
                 <p>Charte qualité</p>
                 <p>Soumettre votre hôtel</p>
             </div>
              <div class="pdp2">
-                <h1>Assistance</h1>
+                <h3 class="foot">Assistance</h3>
                 <p>Centre d'aide</p>
                 <p>Nous contacter</p>
             </div>
