--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
 
     <main>
-        <div>
+        <div class="firstparag">
                 <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
                 <p class="intro">En plein centre ville ou en pleine nature</p>
         </div>
@@ -35,8 +35,9 @@
                 <i class="fa-solid fa-location-dot fat-customize"></i>  
                 <input type="text" class="input" value="Marseille, France">
                     <div class="btn">
-                    <p>Rechercher</p>
+                        <p>Rechercher</p>
                     </div>
+                    <div class="loupe"><i class="fa-solid fa-magnifying-glass"></i></div>
             </div>
         </div>
         <div class="filtreparent">
