--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <img class="logo1" src="images/logo/Booki@3x.png" alt="logo">
         <nav>
             <ul>
-                <li><a href="Hébergements_à_Marseille.html">Hébergements</a></li>
-                <li><a href="Activités_à_Marseille.html">Activités</a></li>
+                <li><a href="#Hébergements_à_Marseille">Hébergements</a></li>
+                <li><a href="#Activités_à_Marseille">Activités</a></li>
             </ul>
         </nav>
     </header>
@@ -67,7 +67,7 @@
 
         <section class="containers">
                 <div class="flex_container">
-                        <h2>Hébergements à Marseille</h2>
+                    <h2 id="Hébergements_à_Marseille">Hébergements à Marseille</h2>
                     <div class="bloc_article">
                         <article class="article1">
                             <a class="texte" href="#" >
@@ -192,7 +192,7 @@
                     </div>
                     <article class="article2">
                         <a class="texte1" href="#" >
-                            <figure>
+                            <figure class="popu">
                                     <img class="img_article2" src="images/hebergements/4_small/c.jpg" alt="appart"> 
                             </figure>
                             <div class="paragraphe3">
@@ -209,11 +209,11 @@
                         </a>
                     </article>
                     <article class="article2">
-                        <a class="texte" href="#" >
-                            <figure>
-                                    <img class="img_article2" src="images/hebergements/4_small/b.jpg" alt="appart">
+                        <a class="texte1" href="#" >
+                            <figure class="popu">
+                                    <img class="img_article2" src="images/hebergements/4_small/b.jpg" alt="appart"> 
                             </figure>
-                            <div class="paragraphe2">
+                            <div class="paragraphe3">
                             <h3 class="title">Au coeur de l'eau Chambres d'hôtes</h3>
                                 <p class="price">Nuit à partir de 71€</p>
                                 <div class="rating3">
@@ -222,15 +222,16 @@
                                     <i class="fa-solid fa-star"></i>
                                     <i class="fa-solid fa-star"></i>
                                     <div class="rating2">
-                                    <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                    </div>
                                 </div>                    
                             </div>
                         </a>
                     </article>
                     <article class="article2">
-                        <a class="texte2" href="#" >
-                            <figure>
-                                    <img class="img_article2" src="images/hebergements/4_small/f.jpg" alt="appart">
+                        <a class="texte1" href="#" >
+                            <figure class="popu">
+                                    <img class="img_article2" src="images/hebergements/4_small/f.jpg" alt="appart"> 
                             </figure>
                             <div class="paragraphe3">
                             <h3 class="title">Hôtel Tout bleu et Blanc</h3>
@@ -240,16 +241,17 @@
                                     <i class="fa-solid fa-star"></i>
                                     <i class="fa-solid fa-star"></i>
                                     <i class="fa-solid fa-star"></i>
-                                    <div class="rating2">
+                                <div class="rating2">
                                     <i class="fa-solid fa-star"></i>
-                                </div>                   
+                                </div>
+                                </div>                    
                             </div>
                         </a>
                     </article>
                 </div>
         </section>
         <section class="activites">
-            <h2 class="activ">Activités à Marseille</h2>
+            <h2 id="Activités_à_Marseille">Activités à Marseille</h2>
             <div class="bloccartes">
               <div class="carte1">
                 <a class="texte" href="#" >
